force-app/main/default/objects/Rkcli_User_Log__c/Rkcli_User_Log__c.object-meta.xml
<CustomObject>
    <description>Capturing Rbcli User Info Logs which is calling Public apex class HbxProxcyController and CdmUpgradeProxyController</description>
    <label>Rkcli User Log</label>
    <nameField>
        <label>Rkcli User Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rkcli User Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>