force-app/main/default/objects/Rkcli_User_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rkcli_User_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>